修改自定义颜色

--- a/.babelrc
+++ b/.babelrc
@@ -10,7 +10,6 @@
   ],
   "plugins": ["transform-vue-jsx", "transform-runtime", ["import", {
     "libraryName": "vant",
-    "libraryDirectory": "es",
-    "style": true
+    "libraryDirectory": "es"
   }]]
 }
