--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "amfe-flexible": "^2.2.1",
+    "axios": "^0.24.0",
     "vant": "^2.12.31",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
