--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "amfe-flexible": "^2.2.1",
     "axios": "^0.24.0",
+    "lodash": "^4.17.21",
+    "qs": "^6.10.2",
     "vant": "^2.12.31",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
